...
        android:id="@+id/action_map"
        android:icon="@drawable/map"
        app:showAsAction="ifRoom"
        android:title="settings"/>
    <!--Button to return to the settings fragment-->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/menu"
        app:showAsAction="ifRoom"
        android:title="settings"/>

</menu>
