...
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/fantasy_fitness_white"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/fantasy_fitness_green"
        android:text="@string/logout"
...
